--- a/src/components/_Components.module.scss
+++ b/src/components/_Components.module.scss
@@ -4,7 +4,8 @@
     border-radius: 15px;
     background-color: #fbfbfb;
     box-shadow: rgba(145, 158, 171, .2) 6px -7px 14px 0px, rgba(145, 158, 171, .12) -7px 7px 24px 6px;
-    width: 430px;
+    max-width: 430px;
+    width: 100%;
 
     .Header {
         display: flex;
@@ -41,6 +42,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: row;
+            gap: 0.75rem;
+
+            @media (max-width: 500px) {
+                flex-direction: column;
+            }
 
             .button {
                 display: inline-flex;
@@ -76,6 +83,10 @@
     max-width: 728px;
     overflow: hidden;
     border-radius: 10px;
+
+    @media (max-width: 680px) {
+        flex-direction: column;
+    }
 
     .Illustration {
         flex: 1 0.5 50%;
@@ -210,7 +221,8 @@
     border-radius: 15px;
     background-color: #fbfbfb;
     box-shadow: rgba(145, 158, 171, .2) 6px -7px 14px 0px, rgba(145, 158, 171, .12) -7px 7px 24px 6px;
-    width: 430px;
+    max-width: 430px;
+    width: 100%;
 
     .Header {
         display: flex;
