--- a/src/components/_Components.module.scss
+++ b/src/components/_Components.module.scss
@@ -325,3 +325,119 @@
         }
     }
 }
+
+
+
+.ModalArea {
+    position: fixed;
+    right: 28px;
+    bottom: 32px;
+
+    .ModalButton {
+        --theme: rgb(76, 128, 150);
+        position: fixed;
+        right: 28px;
+        bottom: 32px;
+        display: inline-flex;
+        border-radius: 8px;
+        padding: 1rem;
+        font-size: 1.25rem;
+        font-weight: 700;
+        border: 2px solid var(--theme);
+        background-color: var(--theme);
+        color: #fbfbfb;
+    }
+
+    .Modal {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+        --theme: rgb(76, 128, 150);
+        --width: 430px;
+        padding: 1.25rem 1rem 2.25rem;
+        border-radius: 15px;
+        background-color: #fbfbfb;
+        box-shadow: rgba(145, 158, 171, .2) 6px -7px 14px 0px, rgba(145, 158, 171, .12) -7px 7px 24px 6px;
+        max-width: var(--width);
+        width: 100%;
+        opacity: 0;
+        scale: 0;
+        transform: translateY(100px);
+        transition: all 0.4s cubic-bezier(0, 0, 0.2, 1) 0ms;
+
+        &.isOpen {
+            opacity: 1;
+            scale: 1;
+            transform: translateY(0);
+
+        }
+
+        .Header {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        svg {
+            color: #262626;
+            opacity: 0.5;
+            cursor: pointer;
+
+            &:hover {
+                opacity: 1;
+            }
+        }
+
+        .Body {
+            h3 {
+                font-size: 1.5rem;
+                font-weight: 700;
+
+            }
+
+            p {
+                font-size: 1rem;
+                font-weight: 500;
+                color: #565656;
+                margin-bottom: 1.25rem;
+            }
+
+
+            .Footer {
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                gap: 0.75rem;
+
+                @media (max-width: 500px) {
+                    flex-direction: column;
+                }
+
+                .button {
+                    display: inline-flex;
+                    border-radius: 8px;
+                    padding: 0.5rem 2.25rem;
+                    font-size: 1rem;
+                    font-weight: 600;
+                    border: 2px solid var(--theme);
+                    color: var(--theme);
+
+                    &+.button {
+                        margin-left: 0.5rem;
+                        background: var(--theme);
+                        color: #fbfbfb;
+                        opacity: 1;
+                        box-shadow: rgb(76 128 150 / 87%) 2px 3px 6px 0px;
+
+                        &:hover {
+                            opacity: 0.9;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+}
